--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=37364bcacc9e6ff773656edc896ef5c8
+APP_SECRET=96b1ebfc857ccd5d9151cc6ed11a77bf
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,8 +28,8 @@ APP_SECRET=37364bcacc9e6ff773656edc896ef5c8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://root:12345678@127.0.0.1:3306/wipexcorp?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
