--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "body-parser": "^1.20.0",
     "bonjour-service": "^1.0.14",
     "boolbase": "^1.0.0",
+    "bootflat": "^2.0.4",
     "bootstrap": "^5.2.1",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -169,6 +170,18 @@
     "globby": "^6.1.0",
     "graceful-fs": "^4.2.10",
     "growly": "^1.3.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-csscomb": "^3.0.0",
+    "grunt-html-validation": "^0.1.18",
+    "grunt-sed": "^0.0.0",
     "handle-thing": "^2.0.1",
     "has": "^1.0.3",
     "has-flag": "^3.0.0",
@@ -215,6 +228,7 @@
     "json5": "^2.2.1",
     "kind-of": "^6.0.3",
     "lilconfig": "^2.0.6",
+    "load-grunt-tasks": "^5.1.0",
     "loader-runner": "^4.3.0",
     "loader-utils": "^2.0.2",
     "locate-path": "^5.0.0",
@@ -379,6 +393,7 @@
     "terser": "^5.15.0",
     "terser-webpack-plugin": "^5.3.6",
     "thunky": "^1.1.0",
+    "time-grunt": "^1.0.0",
     "tmp": "^0.2.1",
     "to-fast-properties": "^2.0.0",
     "to-regex-range": "^5.0.1",
